--- a/_config.yml
+++ b/_config.yml
@@ -33,9 +33,9 @@ comments :
 
 # Internal nav
 nav:
-  - GALLERY: "https://sunbliss.github.io/photorama/gallery/"  
-  - JOURNAL: "https://sunbliss.github.io/photorama/journal/"
-  - ABOUT: "https://sunbliss.github.io/photorama/about/"
+  - Галерея: "https://dodeskaden.github.io/zagirovfoto/gallery/"  
+  - Публикации: "https://dodeskaden.github.io/zagirovfoto/journal/"
+  - О нас: "https://dodeskaden.github.io/zagirovfoto//about/"
 
 # All translation keys
 translations:
