--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: PHOTORAMA
+title: Blog_z
 email: ""
 description: "Photo Journal"
-url: "https://sunbliss.github.io"
+url: "https://dodeskaden.github.io"
 baseurl: "/photorama"
 facebook_username: ""
 twitter_username: ""
