--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Blog_z
 email: ""
 description: "Photo Journal"
-url: "https://dodeskaden.github.io"
+url: "https://dodeskaden.github.io/zagirovfoto/"
 baseurl: "/photorama"
 facebook_username: ""
 twitter_username: ""
